unpackaged/config/ready/19_Student_Ledger/objects/redu_Ledger_Entry__c.object
<CustomObject>
    <fields>
        <fullName>redu_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redu_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>redu_Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>redu_Funding_Assistance__c</fullName>
        <label>Funding Assistance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>redu_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>redu_RIO_P1__c</fullName>
        <label>RIO_P1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Related_Fee_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Fee Line</label>
        <referenceTo>rio_ed__Fee_Line__c</referenceTo>
        <relationshipLabel>Ledger Entries</relationshipLabel>
        <relationshipName>Ledger_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redu_Related_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Payment</label>
        <referenceTo>rio_ed__Fee_Payment__c</referenceTo>
        <relationshipLabel>Ledger Entries</relationshipLabel>
        <relationshipName>Ledger_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redu_Student_Ledger__c</fullName>
        <label>Student Ledger</label>
        <referenceTo>redu_Student_Ledger__c</referenceTo>
        <relationshipLabel>Ledger Entries</relationshipLabel>
        <relationshipName>Ledger_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redu_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Discount %</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Upfront_Payment_Amount__c</fullName>
        <label>Upfront Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Ledger Entry</label>
    <nameField>
        <displayFormat>LE-{000000}</displayFormat>
        <label>Ledger Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>